<resources>
    <string name="app_name">더치페이 계산기</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">계산하기</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id_test">ca-app-pub-3940256099942544/1033173712</string>

    <string name="interstitial_ad_unit_id">ca-app-pub-7696719602071323/4240216467</string>
    <string name="dutch_count">더치페이 인원 수</string>
    <string name="how_many_people">몇 명이서 나눌건가요?</string>
    <string name="next">다음</string>
    <string name="dutch_add">더치페이 내역 추가</string>
    <string name="enter_place">장소 입력</string>
    <string name="enter_price">가격 입력</string>
    <string name="after_calculate">계산 후 이런 문장이 나왔어요!</string>
    <string name="share_friend">친구에게 공유하기</string>
    <string name="after_cal">더치페이 계산 후</string>
    <string name="share">공유하기</string>
    <string name="won">원</string>
    <string name="total">총합</string>
    <string name="at">에서</string>
</resources>