<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">
    <TextView
        android:id="@+id/title_result"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:textSize="16sp"
        android:fontFamily="@font/nanum_round"
        android:text="@string/after_cal"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:id="@+id/view_result"
        android:background="@color/browser_actions_bg_grey"
        app:layout_constraintTop_toBottomOf="@+id/title_result"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        />
    <TextView
        app:layout_constraintTop_toBottomOf="@id/view_result"
        app:layout_constraintBottom_toTopOf="@id/result_edit"
        android:textSize="25sp"
        android:gravity="center"
        android:fontFamily="@font/nanum_bold"
        android:id="@+id/result_ment"
        android:text="@string/after_calculate"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/result_edit"
        android:background="@drawable/button_deep_round"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:fontFamily="@font/nanum_round"
        android:textColor="@color/black"
        android:lineSpacingExtra="3dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>
    <Button
        android:id="@+id/share_button"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:fontFamily="@font/nanum_round"
        android:gravity="center"
        android:text="@string/share"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>